2008-05-21  Timothy Hatcher  <timothy@apple.com>

        Adds the files and line numbers to the Profile call tree.

        <rdar://problem/5952924> Inspector needs to show file and line number
        in the Profile call tree

        Reviewed by Geoff Garen.

        * page/JavaScriptProfileNode.cpp:
        (WebCore::getFunctionName): Fixes a JSStringRef leak.
        (WebCore::getURL): Call ProfileNode::url.
        (WebCore::getLineNumber): Call ProfileNode::lineNumber.
        (WebCore::ProfileNodeClass): Add the url and lineNumber properties.
        * page/inspector/ProfileView.js:
        (WebInspector.ProfileDataGridNode.prototype.createCell): Overload the
        DataGridNode.createCell and add the file and lineNumber to the
        cell if the column is the function column.
        * page/inspector/inspector.css: New styles for the file and line.

2008-05-21  Timothy Hatcher  <timothy@apple.com>

        Restores logging of console calls to the STDOUT
        when Interpreter::shouldPrintExceptions() is true.

        <rdar://problem/5636442> REGRESSION: Console.log no longer logs to
        the system console or terminal

        <rdar://problem/5146079> JavaScript exception logging should print
        accurate file and line info when called from WebScriptObject

        Reviewed by Adam Roben.

        * bindings/js/JSCustomSQLStatementCallback.cpp:
        (WebCore::JSCustomSQLStatementCallback::handleEvent): Remove existing
        printf and check for Interpreter::shouldPrintExceptions() since there is
        a call to Console::addMessage.
        * bindings/js/JSCustomSQLStatementErrorCallback.cpp:
        (WebCore::JSCustomSQLStatementErrorCallback::handleEvent): Ditto.
        * bindings/js/JSCustomSQLTransactionCallback.cpp:
        (WebCore::JSCustomSQLTransactionCallback::handleEvent): Ditto.
        * bindings/js/JSCustomSQLTransactionErrorCallback.cpp:
        (WebCore::JSCustomSQLTransactionErrorCallback::handleEvent): Ditto.